# mindmesh

./: .gitignore  CHANGELOG.md  GLOSSARY.md  README.md  component_library.md  design_tokens.json  mindmesh_full_spec.json  mindmesh_ui_ux_spec.json  system_architecture.md
assets/: neuron_glow.glsl
core/: Cargo.toml
core/src/: ai.rs  analytics.rs  automation.rs  data_layer.rs  export.rs  feature_flags.rs  hardware.rs  lib.rs  p2p.rs  plugins.rs  storage.rs
frontend/: Cargo.toml  snapshot_1760446430.mm
frontend/src/: main.rs
scripts/: build.sh  performance_test.sh
