[package]
name = "mindmesh-core"
version = "1.0.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rayon = "1.7"
aes-gcm = "0.10"  # For encryption
thiserror = "1.0"
chrono = "0.4"    # For timestamps
flate2 = "1.0"    # For compression
tokio = { version = "1.0", features = ["full"] }  # For async operations
wasmtime = "17"  # For WASM plugins
serialport = "4.7"  # For hardware integration
